[workspace.package]
version = "0.5.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Incremental BPE tokenization for all prefixes"
repository = "https://github.com/ModelTC/mtc-incremental-bpe"
homepage = "https://github.com/ModelTC/mtc-incremental-bpe"
documentation = "https://docs.rs/mtc-incremental-bpe"
authors = ["Chielo Newctle <ChieloNewctle@gmail.com>"]

[package]
name = "mtc-incremental-bpe"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
readme = "README.md"
exclude = ["release-plz.toml", ".github"]

[dependencies]
bytes = "1.11.0"
derive_more = { version = "2.1.0", features = ["add", "constructor", "debug", "deref", "deref_mut", "display", "from", "into", "into_iterator", "not"] }
thiserror = "2.0.17"
tinyvec = { version = "1.10.0", features = ["alloc"] }

[dev-dependencies]
rand = "0.9.2"
